--- a/index.html
+++ b/index.html
@@ -22,8 +22,20 @@
      .bio-box a {
        color: green;
      }
+     .alert {
+       background: red;
+     }
+     #exec-bio.alert {
+       background: red;
+     }
      #exec-bio2 {
        background-color: orange;
+     }
+     .bio-box {
+       width: 75%;
+     }
+     .bio-box {
+       width: 50%;
      }
     </style>
   </head>
@@ -41,16 +53,16 @@
       </li>
     </ul>
     <h2>I'm an h2</h2>
-    <div id="exec-bio" class="bio-box">
+    <div id="exec-bio" class="bio-box alert">
       <a href="https://example.com/">I'm a link</a>
     </div>
     <div class="bio-box">
       <a href="https://example.com/">I'm a link</a>
     </div>
-    <div id="exec-bio2" class="bio=box">
+    <div id="exec-bio2" class="bio-box">
       <a href="https://example.com/">I'm a link</a>
     </div>
-    <div class="bio-box">
+    <div class="bio-box alert">
       <a href="https://example.com/">I'm a link</a>
     </div>
   </body>
