--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
      .show {
        display: block;
      }
+     .social-list {
+       list-style: none;
+       padding: 0;
+       text-align: center;
+     }
+     .social-list > li {
+       display: inline-block;
+     }
      /* バイオグラフィースタイル */
      .bio-wrapper {
        font-size: 24px;
@@ -59,15 +67,15 @@
   <body>
     <div class="full-hero hero-home">
       <h1>I'm an h1</h1>
-      <ul>
+      <ul class="social-list">
         <li>
-          <a href="https://example.com/">Link</a>
+          <a href="https://example.com/" class="social-link">Link</a>
         </li>
         <li>
-          <a href="https://example.com/">Link</a>
+          <a href="https://example.com/" class="social-link">Link</a>
         </li>
         <li>
-          <a href="https://example.com/">Link</a>
+          <a href="https://example.com/" class="social-link">Link</a>
         </li>
       </ul>
     </div>
