--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
      /* バイオグラフィースタイル */
      .bio-wrapper {
        font-size: 24px;
+       margin: auto;
+       max-width: 960px;
        overflow: hidden;
      }
      .bio-box {
@@ -45,11 +47,18 @@
        box-sizing: border-box;
        float: left;
        font-size: 1rem;
+       margin: 40px 1% 0;
        padding: 2%;
-       width: 25%;
+       width: 23%;
      }
      .bio-box h3 {
+       color: #fff;
        font-size: 1.5em;
+       margin: -40px 0 1em;
+       text-align: center;
+     }
+     .bio-box img {
+       width: 100%;
      }
      .bio-copy {
        font-size: 1rem;
@@ -82,6 +91,7 @@
     <h2>I'm an h2</h2>
     <div class="bio-wrapper">
       <div class="bio-box">
+        <img src="https://placekitten.com/g/400/400">
         <h3>Michael Hartl</h3>
         <a href="https://twitter.com/mhartl" class="social-link show">here</a>
         <div class="bio-copy">
@@ -101,6 +111,7 @@
         </div>
       </div>
       <div class="bio-box">
+        <img src="https://placekitten.com/g/400/400">
         <h3>Lee Donahoe</h3>
         <a href="https://twitter.com/leedonahoe" class="social-link">here</a>
         <div class="bio-copy">
@@ -113,6 +124,7 @@
         </div>
       </div>
       <div class="bio-box">
+        <img src="https://placekitten.com/g/400/400">
         <h3>Nick Merwin</h3>
         <a href="https://twitter.com/nickmerwin" class="social-link">here</a>
         <div class="bio-copy">
@@ -125,6 +137,7 @@
         </div>
       </div>
       <div class="bio-box">
+        <img src="https://placekitten.com/g/400/400">
         <h3>??</h3>
         <p>
           The Future
