--- a/index.html
+++ b/index.html
@@ -19,10 +19,20 @@
      /* SNSスタイル */
      .social-link {
        background: rgba(150, 150, 150, 0.5);
-       color: blue;
+       border-radius: 99px;
+       box-sizing: border-box;
+       color: #fff;
        display: inline-block;
-       height: 36px;
-       width: 36px;
+       font-family: helvetica, arial, sans;
+       font-size: 1rem;
+       font-weight: bold;
+       height: 2.5em;
+       line-height: 1;
+       padding-top: 0.85em;
+       text-align: center;
+       text-decoration: none;
+       vertical-align: middle;
+       width: 2.5em;
      }
      .show {
        display: block;
@@ -34,6 +44,7 @@
      }
      .social-list > li {
        display: inline-block;
+       margin: 0 0.5em;
      }
      /* バイオグラフィースタイル */
      .bio-wrapper {
@@ -48,7 +59,7 @@
        float: left;
        font-size: 1rem;
        margin: 40px 1% 0;
-       padding: 0 2% 2%;
+       padding: 2%;
        width: 23%;
      }
      .bio-box h3 {
@@ -62,6 +73,7 @@
      }
      .bio-copy {
        font-size: 1rem;
+       line-height: 1.5;
      }
      .bio-copy a {
        color: blue;
@@ -78,13 +90,13 @@
       <h1>I'm an h1</h1>
       <ul class="social-list">
         <li>
-          <a href="https://example.com/" class="social-link">Link</a>
+          <a href="https://example.com/" class="social-link">Fb</a>
         </li>
         <li>
-          <a href="https://example.com/" class="social-link">Link</a>
+          <a href="https://example.com/" class="social-link">Tw</a>
         </li>
         <li>
-          <a href="https://example.com/" class="social-link">Link</a>
+          <a href="https://example.com/" class="social-link">Gh</a>
         </li>
       </ul>
     </div>
@@ -93,7 +105,7 @@
       <div class="bio-box">
         <img src="https://placekitten.com/g/400/400">
         <h3>Michael Hartl</h3>
-        <a href="https://twitter.com/mhartl" class="social-link show">here</a>
+        <a href="https://twitter.com/mhartl" class="social-link">Tw</a>
         <div class="bio-copy">
           <p>
             Known for his dazzling charm, rapier wit, and unrivaled humility,
@@ -113,7 +125,7 @@
       <div class="bio-box">
         <img src="https://placekitten.com/g/400/400">
         <h3>Lee Donahoe</h3>
-        <a href="https://twitter.com/leedonahoe" class="social-link">here</a>
+        <a href="https://twitter.com/leedonahoe" class="social-link">Tw</a>
         <div class="bio-copy">
           <p>
             When he's not literally swimming with sharks or hunting powder stashes on
@@ -126,7 +138,7 @@
       <div class="bio-box">
         <img src="https://placekitten.com/g/400/400">
         <h3>Nick Merwin</h3>
-        <a href="https://twitter.com/nickmerwin" class="social-link">here</a>
+        <a href="https://twitter.com/nickmerwin" class="social-link">Tw</a>
         <div class="bio-copy">
           <p>
             You may have seen him shredding guitar live with Capital Cities on Jimmy
