--- a/index.html
+++ b/index.html
@@ -14,8 +14,15 @@
        margin-top: 0;
      }
      a {
-       color: #ff0000;
+       color: #f00;
      }
+
+     /* ヒーロースタイル */
+     .full-hero {
+       background-color: #c7dbfc;
+       height: 50vh;
+     }
+
      /* SNSスタイル */
      .social-link {
        background: rgba(150, 150, 150, 0.5);
@@ -34,9 +41,6 @@
        vertical-align: middle;
        width: 2.5em;
      }
-     .show {
-       display: block;
-     }
      .social-list {
        list-style: none;
        padding: 0;
@@ -46,6 +50,7 @@
        display: inline-block;
        margin: 0 0.5em;
      }
+
      /* バイオグラフィースタイル */
      .bio-wrapper {
        font-size: 24px;
@@ -72,16 +77,11 @@
        width: 100%;
      }
      .bio-copy {
-       font-size: 1rem;
+       font-size: 1em;
        line-height: 1.5;
      }
      .bio-copy a {
-       color: blue;
-     }
-     /* ヒーロースタイル */
-     .full-hero {
-       background-color: #c7dbfc;
-       height: 50vh;
+       color: green;
      }
     </style>
   </head>
@@ -113,8 +113,11 @@
             <a href="https://www.railstutorial.org/">Ruby on Rails
               Tutorial</a> and principal author of the
             <a href="https://learnenough.com/">
-              Learn Enough to Be Dangerous</a> introductory sequence. Michael
-            is also notorious as the founder of
+              Learn Enough to Be Dangerous</a> introductory sequence.
+          </p>
+
+          <p>
+            Michael is also notorious as the founder of
             <a href="http://tauday.com/">Tau Day</a> and author of
             <a href="http://tauday.com/tau-manifesto"><em>The Tau
               Manifesto</em></a>, but rumors that he's secretly a supervillain
@@ -128,10 +131,10 @@
         <a href="https://twitter.com/leedonahoe" class="social-link">Tw</a>
         <div class="bio-copy">
           <p>
-            When he's not literally swimming with sharks or hunting powder stashes on
-            his snowboard, you can find Lee in front of his computer designing
-            interfaces, doing front-end development, or writing some of the
-            interface-related Learn Enough tutorials.
+            When he's not literally swimming with sharks or hunting powder
+            stashes on his snowboard, you can find Lee in front of his computer
+            designing interfaces, doing front-end development, or writing some of
+            the interface-related Learn Enough tutorials.
           </p>
         </div>
       </div>
@@ -141,10 +144,10 @@
         <a href="https://twitter.com/nickmerwin" class="social-link">Tw</a>
         <div class="bio-copy">
           <p>
-            You may have seen him shredding guitar live with Capital Cities on Jimmy
-            Kimmel, Conan, or The Ellen Show, but rest assured Nick is a true nerd at
-            heart. He's just as happy shredding well-spec'd lines of code from a tour
-            bus as he is from his kitchen table.
+            You may have seen him shredding guitar live with Capital Cities on
+            Jimmy Kimmel, Conan, or The Ellen Show, but rest assured Nick is a
+            true nerd at heart. He's just as happy shredding well-spec'd lines
+            of code from a tour bus as he is from his kitchen table.
           </p>
         </div>
       </div>
@@ -156,7 +159,7 @@
         </p>
       </div>
     </div>
-   <p>
+    <p>
       Learn Enough to Be Dangerous is a leader in the movement to teach the
       world <em>technical sophistication</em>, which includes both "hard
       skills" like coding, command lines, and version control, and "soft
