--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@ layout: default
   </div>
 </div>
 
+.
+.
+.
 <div class="home-callout">
   <h1 class="callout-title">The Learn Enough Story</h1>
   <div class="callout-copy">
@@ -41,8 +44,8 @@ layout: default
       <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a> and the
       <a href="https://www.softcover.io/">Softcover publishing platform</a>. This
       page is part of the sample site for <a
-                                            href="https://learnenough.com/css-tutorial"><em>Learn Enough CSS and Layout
-        to Be Dangerous</em></a>, which teaches the basicics of
+      href="https://learnenough.com/css-tutorial"><em>Learn Enough CSS and Layout
+      to Be Dangerous</em></a>, which teaches the basicics of
       <strong>C</strong>ascading <strong>S</strong>tyle
       <strong>S</strong>heets, the language that
       allows web pages to be styled. Other related tutorials can be found at
@@ -72,15 +75,15 @@ layout: default
           Known for his dazzling charm, rapier wit, and unrivaled humility,
           Michael is the creator of the
           <a href="https://www.railstutorial.org/">Ruby on Rails
-            Tutorial</a> and principal author of the
-          <a href="https://learnenough.com/"> Learn Enough to Be Dangerous</a>
-          introductory sequence.
+          Tutorial</a> and principal author of the
+          <a href="https://learnenough.com/">
+          Learn Enough to Be Dangerous</a> introductory sequence.
         </p>
         <p>
           Michael is also notorious as the founder of
-          <a href="http://tauday.com/">Tau Day</a> and author of
-          <a href="http://tauday.com/tau-manifesto"><em>The Tau
-            Manifesto</em></a>, but rumors that he's secretly a supervillain are
+          <a href="http://tauday.com/">Tau Day</a> and
+          author of <a href="http://tauday.com/tau-manifesto"><em>The Tau
+          Manifesto</em></a>, but rumors that he's secretly a supervillain are
           slightly exaggerated.
         </p>
       </div>
